--- a/ImportCrud/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ImportCrud/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ExternalLoginListViewModel
+﻿@model ImportCrud.ViewModel.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
