fix: correct migrations and build errors

--- a/ImportCrud/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ImportCrud/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ExternalLoginConfirmationViewModel
+﻿@model ImportCrud.ViewModel.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
