--- a/ImportCrud/Views/Account/ForgotPassword.cshtml
+++ b/ImportCrud/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ForgotPasswordViewModel
+﻿@model ImportCrud.ViewModel.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
