--- a/ImportCrud/Views/Account/ResetPassword.cshtml
+++ b/ImportCrud/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ResetPasswordViewModel
+﻿@model ImportCrud.ViewModel.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
