--- a/ImportCrud/Views/Manage/AddPhoneNumber.cshtml
+++ b/ImportCrud/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.AddPhoneNumberViewModel
+﻿@model ImportCrud.ViewModel.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
