--- a/ImportCrud/Views/Manage/ChangePassword.cshtml
+++ b/ImportCrud/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ChangePasswordViewModel
+﻿@model ImportCrud.ViewModel.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
