--- a/ImportCrud/Views/Manage/SetPassword.cshtml
+++ b/ImportCrud/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.SetPasswordViewModel
+﻿@model ImportCrud.ViewModel.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
