--- a/ImportCrud/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ImportCrud/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.VerifyPhoneNumberViewModel
+﻿@model ImportCrud.ViewModel.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
