--- a/ImportCrud/Views/Account/VerifyCode.cshtml
+++ b/ImportCrud/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.VerifyCodeViewModel
+﻿@model ImportCrud.ViewModel.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
