--- a/ImportCrud/Views/Manage/ManageLogins.cshtml
+++ b/ImportCrud/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImportCrud.Models.ManageLoginsViewModel
+﻿@model ImportCrud.ViewModel.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
